2013-12-25  Eli Zaretskii  <eliz@gnu.org>

	* info/man.c (get_manpage_from_formatter) <!PIPE_USE_FORK>: 
	Check for end of array without using removed variable.

2013-12-25  Eli Zaretskii  <eliz@gnu.org>

	* info/pcterm.c (gettextinfo): Pass expected arguments to 
	info_error.

2013-12-25  Eli Zaretskii  <eliz@gnu.org>

	* info/terminal.c (terminal_initialize_terminal) 
	<terminal_initialize_terminal_hook>: Call initialize_byte_map.

2014-12-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (display_update_window_1): Don't display a line 
	continuation character on the last line of the display.  Check 
	was formerly done in process_node_text.  Report from Eli 
	Zaretskii.

2014-12-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm: Set CSS styles for @indentedblock, 
	@smallindentedblock with "blockquote" instead of "div".

	(%indented_block_commmands, %indented_preformatted_commands): 
	Renamed.

	(_convert_preformatted_or_indented_commands)
	(_convert_preformatted_command): Renamed.  Don't use this 
	function for @indentedblock and @smallindentedblock.

	(_convert_indented_command): New function.  Use "blockquote" tag 
	to indent @indentedblock and @smallindentedblock.

2014-12-18  Karl Berry  <karl@gnu.org>

	* doc/refcard/Makefile (spell): new target.
	* doc/refcard/refcard.spell: aspell exception list.

2014-12-18  Karl Berry  <karl@gnu.org>

	* run gnulib-tool --add-import, as strcasecmp.c became needed.

2014-12-17  Karl Berry  <karl@gnu.org>

	* util/Makefile.am (EXTRA_DIST): remove gendocs.sh,
	gendocs_template; now maintained in gnulib (and not by me).

2014-12-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_indices_of_file_buffer): Case insensitive 
	search for nodes with "index" in their names.
	
	* info/session.c (info_menu_ref_item): If multiple references in 
	a line pick the right one.

	* doc/texinfo.texi (@raggedright): Fix typo.

2014-12-14  Karl Berry  <karl@gnu.org>
